--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="home" class="section active">
         <div class="home-content">
            <div class = "card1">
-            <img src="necoh.jpg" alt="Profile picture">
+            <img src="Necoh.jpg" alt="Profile picture">
             <div class="profile">
               <h1 class = "name">Necoh Shem Dela Cruz</h1>
               <div class = "typing-container">
